style: fix spacing between sections

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,6 +77,7 @@ main {
 section {
   scroll-margin-top: var(--header-height); /* Offset for the sticky header */
   width: 100%;
+  padding: 3rem 0;
 }
 
 .section-content {
@@ -96,17 +97,14 @@ section {
 
 #about {
   background-color: var(--background-test2);
-  padding: 2rem 0;
 }
 
 #projects {
   background-color: var(--background-test2);
-  padding: 2rem 0;
 }
 
 #contact {
   background-color: var(--background-test2);
-  padding: 2rem 0;
 }
 
 /* Header and Footer */
